# partitioner

./: .gitignore  .tm_properties  Partitioner.hs  README.md  partitioner.cabal
Partitioner/: DataType.hs  Partition.hs  Rebuild.hs
