name:                partitioner
version:             0.1
synopsis:            An Automatic Partitioning Tool for Haskell
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Michael Dever
maintainer:          michael.dever2@mail.dcu.ie
-- copyright:           
category:            Concurrency
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.14

Library
  Build-Depends:    base >= 4 && < 5, split >= 0.2, pretty >= 1.1.1, haskell-src-exts == 1.15.0, language-core >= 0.5
  Exposed-modules:  Partitioner, Partitioner.DataType, Partitioner.Rebuild, Partitioner.Partition
  ghc-options:      -Wall
  default-language: Haskell2010
